# doomsumo

./: Cargo.toml  README.md  flake.nix  icon.svg.import  project.godot
objects/: pla2E15.tmp  player.tscn
scenes/: world.tscn
scripts/: player.gd
sprites/enviroment/: mountains.png.import  plank.png.import  sun.png.import
sprites/enviroment/clouds/: cloud_1.png.import  cloud_2.png.import  cloud_3.png.import  cloud_4.png.import  cloud_5.png.import  cloud_6.png.import  cloud_7.png.import
sprites/player/: doom_idle1.png.import  doom_idle2.png.import  doom_idle3.png.import  doom_idle4.png.import  doom_small.png.import  head.png.import  left_arm.png.import  left_bicep.png.import  left_calf.png.import  left_foot.png.import  left_forearm.png.import  left_hand.png.import  left_leg.png.import  left_quad.png.import  pelvis.png.import  player_animations.tres  right_arm.png.import  right_bisep.png.import  right_calf.png.import  right_foot.png.import  right_forearm.png.import  right_hand.png.import  right_leg.png.import  right_quad.png.import  torso.png.import
src/: main.rs
