[package]
name = "doomsumo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_ggrs = { version = "0.18.0", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.12", features = ["ggrs"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3